Added the sql to store the nodes data , server id